--- a/eqv.ipynb
+++ b/eqv.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "00b55bb6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import sqrt"
+    "from math import sqrt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -65,11 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "deeaad79",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 0.5       , 0.33333333, 0.25      , 0.2       ])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=np.array([1,2,3,4,5])\n",
+    "1/a"
+   ]
   },
   {
    "cell_type": "code",
